# Instant-mix

./: .gitignore  CMakeLists.txt
Source/: InstantMixLookAndFeel.cpp  InstantMixLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin_host_build/: CMakeCache.txt  JUCEExportConfig.cmake  Makefile  cmake_install.cmake
plugin_host_build/extras/: Makefile  cmake_install.cmake
plugin_host_build/extras/AudioPerformanceTest/: Makefile  cmake_install.cmake
plugin_host_build/extras/AudioPerformanceTest/AudioPerformanceTest_artefacts/AudioPerformanceTest.app/Contents/: Info.plist
plugin_host_build/extras/AudioPerformanceTest/AudioPerformanceTest_artefacts/JuceLibraryCode/: Defs.txt  Info.txt
plugin_host_build/extras/AudioPerformanceTest/AudioPerformanceTest_artefacts/JuceLibraryCode/AudioPerformanceTest/: Info.plist
plugin_host_build/extras/AudioPluginHost/: Makefile  cmake_install.cmake
plugin_host_build/extras/AudioPluginHost/AudioPluginHost_artefacts/AudioPluginHost.app/Contents/: Info.plist
plugin_host_build/extras/AudioPluginHost/AudioPluginHost_artefacts/JuceLibraryCode/: Defs.txt  Info.txt  JuceHeader.h
plugin_host_build/extras/AudioPluginHost/AudioPluginHost_artefacts/JuceLibraryCode/AudioPluginHost/: Info.plist
plugin_host_build/extras/AudioPluginHost/juce_binarydata_AudioPluginHostData/JuceLibraryCode/: BinaryData1.cpp  BinaryData2.cpp  BinaryData3.cpp  BinaryData4.cpp  BinaryData5.cpp  BinaryData6.cpp  input_file_list
plugin_host_build/extras/BinaryBuilder/: Makefile  cmake_install.cmake
plugin_host_build/extras/BinaryBuilder/BinaryBuilder_artefacts/JuceLibraryCode/: Defs.txt  Info.txt
plugin_host_build/extras/NetworkGraphicsDemo/: Makefile  cmake_install.cmake
plugin_host_build/extras/NetworkGraphicsDemo/NetworkGraphicsDemo_artefacts/JuceLibraryCode/: Defs.txt  Info.txt
plugin_host_build/extras/NetworkGraphicsDemo/NetworkGraphicsDemo_artefacts/JuceLibraryCode/NetworkGraphicsDemo/: Info.plist
plugin_host_build/extras/NetworkGraphicsDemo/NetworkGraphicsDemo_artefacts/NetworkGraphicsDemo.app/Contents/: Info.plist
plugin_host_build/extras/Projucer/: Makefile  cmake_install.cmake
plugin_host_build/extras/Projucer/Projucer_artefacts/JuceLibraryCode/: Defs.txt  Info.txt
plugin_host_build/extras/Projucer/Projucer_artefacts/JuceLibraryCode/Projucer/: Info.plist
plugin_host_build/extras/Projucer/Projucer_artefacts/Projucer.app/Contents/: Info.plist
plugin_host_build/extras/Projucer/juce_binarydata_ProjucerData/JuceLibraryCode/: input_file_list
plugin_host_build/extras/UnitTestRunner/: Makefile  cmake_install.cmake
plugin_host_build/extras/UnitTestRunner/UnitTestRunner_artefacts/JuceLibraryCode/: Defs.txt  Info.txt
plugin_host_build/modules/: Makefile  cmake_install.cmake
plugin_host_build/tools/: CMakeCache.txt  JUCEExportConfig.cmake  JUCEToolsExport.cmake  Makefile  cmake_install.cmake
plugin_host_build/tools/modules/: Makefile  cmake_install.cmake
